Opt in to System.load for vat exec script